Some structs are now ready to hold table data. Need to rethink their structures to fit this new definition.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Empty.Empty
+GlobalDefaultGameMode=/Script/SpaceTruckers.SoloGameModeBase
+GlobalDefaultServerGameMode=/Script/SpaceTruckers.SoloGameModeBase
+EditorStartupMap=/Game/Empty.Empty
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
